--- a/src/index.css
+++ b/src/index.css
@@ -1,67 +1,40 @@
 :root {
-	--radius: 2px;
-	--blue: #1E88E5;
-	--white: #FFFFFF;
-	--offwhite: #F8F8FA;
-	--transition-duration: 300ms;
-	--font-header: 'Montserrat';
-	--font-list: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-@font-face {
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-display: swap;
-	font-weight: 200;
-	src: local('Montserrat ExtraLight'), local('Montserrat-ExtraLight'), url(https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_aZA3gnD_vx3rCs.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-	font-family: 'Montserrat';
-	font-style: normal;
-	font-display: swap;
-	font-weight: 800;
-	src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(https://fonts.gstatic.com/s/montserrat/v12/JTURjIg1_i6t8kCHKm45_c5H3gnD_vx3rCs.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-	font-family: 'Roboto Mono';
-	font-style: normal;
-	font-display: swap;
-	font-weight: 400;
-	src: local('Roboto Mono'), local('RobotoMono-Regular'), url(https://fonts.gstatic.com/s/robotomono/v5/L0x5DF4xlVMF-BfR8bXMIjhLq3-cXbKD.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  --mdc-theme-primary: #6200ee;
+  --radius: 2px;
+  --blue: #1e88e5;
+  --white: #ffffff;
+  --offwhite: #f8f8fa;
+  --transition-duration: 300ms;
+  font-family: Roboto;
 }
 
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 *,
 *:after,
 *:before {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	color: #333;
-	position: relative;
-	font-family: var(--font-list);
-	-webkit-font-smoothing: antialiased;
+  color: #424242;
+  position: relative;
+  -webkit-font-smoothing: antialiased;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f5f5f5;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
+a,
+a:visited,
+a:active,
 a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
+  text-decoration: none;
+  color: var(--mdc-theme-primary);
 }
