Refactors Poll to have a conditional render for answered poll items.

--- a/src/components/Poll/index.css
+++ b/src/components/Poll/index.css
@@ -11,6 +11,16 @@
   text-transform: initial;
 }
 
+.resultsContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row !important;
+}
+
+.result {
+  margin: 16px;
+}
+
 .card h2 {
   padding-top: 16px;
 }
