--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -1,15 +1,57 @@
 .nav {
-	width: 100%;
-	height: 56px;
-	display: flex;
-	padding: 0 32px;
-	position: relative;
-	background: #fff;
-	align-items: center;
-	position: fixed;
-	z-index: 9;
-	top: 0;
-	border-bottom: 1px solid #eee;
+  width: 100%;
+  height: 56px;
+  display: flex;
+  padding: 0 32px;
+  position: relative;
+  background: #fff;
+  align-items: center;
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  border-bottom: 1px solid #eee;
 }
 
+.navMaxWidth {
+  width: 468px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
+.linksContainer {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: row;
+  align-items: center;
+}
+
+.link {
+  margin: 0 8px;
+  color: var(--mdc-theme-primary);
+  font-size: 14px;
+}
+
+.link:hover {
+	opacity: .7;
+}
+
+.link:nth-child(2) {
+  display: flex;
+  flex: 1 1 auto;
+}
+
+.img {
+  align-self: flex-end;
+}
+
+@media screen and (max-width: 769px) {
+  .nav {
+    padding: 8px;
+  }
+  .navMaxWidth {
+    width: 100%;
+    padding: 0 8px;
+  }
+}
