Passes users into Poll component in order to retrieve names and avatarURLS.

--- a/src/components/Poll/index.css
+++ b/src/components/Poll/index.css
@@ -42,6 +42,13 @@
   height: 20px;
 }
 
+.cardHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   .poll {
     flex-direction: column;
