--- a/src/components/Poll/index.css
+++ b/src/components/Poll/index.css
@@ -18,7 +18,13 @@
 }
 
 .result {
-  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 8px;
+  margin: 8px;
+  width: 50%;
+  border: 1px solid #f5f5f5;
 }
 
 .card h2 {
